--- a/src/Hackathon.Beuth.Client/Hackathon.Beuth.Client.Droid/Hackathon.Beuth.Client.Droid.csproj
+++ b/src/Hackathon.Beuth.Client/Hackathon.Beuth.Client.Droid/Hackathon.Beuth.Client.Droid.csproj
@@ -120,6 +120,12 @@
     <AndroidResource Include="Resources\layout\Toolbar.axml" />
     <AndroidResource Include="Resources\values\styles.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Hackathon.Beuth.Client\Hackathon.Beuth.Client.csproj">
+      <Project>{dd470d69-6bc8-4711-b253-7a94df8a7a2d}</Project>
+      <Name>Hackathon.Beuth.Client</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
